--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "전성후의 블로그"
 description: "test."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: "jeonseonghu.github.io"
+baseurl: ""
 google_analytics: ''
 disqus: ''
 mailchimp-list: ''
